--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
     "build": "npx tsc",
-    "start": "nodemon src/server.ts"
+    "start": "nodemon src/server.ts",
+        "prettier ": "npx prettier --write ."
   },
   "author": "Udacity",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.9",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
@@ -22,10 +24,12 @@
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
+    "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/pg": "^8.6.5",
