--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "server.ts",
   "scripts": {
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess 'node ./dist/server.js'",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test":"npm run build && npm run jasmine",
     "tsc": "tsc",
     "build": "npx tsc",
     "start": "nodemon src/server.ts",
-        "prettier ": "npx prettier --write ."
+    "prettier ": "npx prettier --write .",
+    "jasmine": "jasmine"
   },
   "author": "Udacity",
   "license": "ISC",
@@ -21,6 +22,8 @@
     "db-migrate-pg": "^1.2.2",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
+    "jasmine": "^4.4.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
@@ -31,6 +34,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
+    "@types/jasmine": "^4.3.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/pg": "^8.6.5",
     "tsc-watch": "^4.2.9"
