--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "prettier": "^2.7.1",
+    "supertest": "^6.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.1.3"
   },
@@ -38,6 +39,7 @@
     "@types/jasmine": "^4.3.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/pg": "^8.6.5",
+    "@types/supertest": "^2.0.12",
     "tsc-watch": "^4.2.9"
   }
 }
